# kybe-paste-manager

./: Cargo.toml  shell.nix
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: main.rs
src/config/: mod.rs  types.rs
src/pastebins/: mod.rs  pastebin_com.rs
