[package]
name = "kybe-paste-manager"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "kpam"
path = "src/main.rs"

[dependencies]
toml = "0.9.11"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
clap = { version = "4.5.57", features = ["derive"] }
clap_complete = "4.5.65"
anyhow = "1.0.101"
directories = "6.0.0"
async-trait = "0.1.89"
log = "0.4.29"
colog = "1.4.0"
atty = "0.2.14"
reqwest = { version = "0.13.1", features = ["json", "form"] }
